--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,6 @@ on:
 
 jobs:
   check:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: "Check pull request"
-        run: echo "Anasun"
+     name: "Check"
+     uses: ./.github/workflows/build.yml
     
