--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,10 @@ name: "Build"
 
 on:
   workflow_call:
+    inputs:
+      upload:
+        type: boolean
+        default: false
 
 jobs:
   build:
@@ -10,9 +14,16 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+
+      - name: "Build"
       - uses: nrwl/nx-set-shas@v3
       - run: npm ci
 
       - run: npx nx affected -t lint --parallel=3
       - run: npx nx affected -t test --parallel=3 --configuration=ci
       - run: npx nx affected -t build --parallel=3
+
+      - name: "Upload artifact"
+        if: ${{ inputs.upload == true }}
+        uses: actions/upload-pages-artifact
+        path: ./dist/apps/blow-it
