--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,8 +16,8 @@ jobs:
           fetch-depth: 0
 
       - name: "Build"
-      - uses: nrwl/nx-set-shas@v3
-      - run: npm ci
+        uses: nrwl/nx-set-shas@v3
+        run: npm ci
 
       - run: npx nx affected -t lint --parallel=3
       - run: npx nx affected -t test --parallel=3 --configuration=ci
