--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -7,6 +7,8 @@ jobs:
   build:
     name: "Build"
     uses: ./.github/workflows/build.yml
+    with:
+      upload: true
 
   deploy:
     needs: build
