--- a/apps/blow-it/project.json
+++ b/apps/blow-it/project.json
@@ -9,7 +9,8 @@
       "outputs": ["{options.outputPath}"],
       "defaultConfiguration": "production",
       "options": {
-        "outputPath": "dist/apps/blow-it"
+        "outputPath": "dist/apps/blow-it",
+        "base": ""
       },
       "configurations": {
         "development": {
