add base path `/monomoto`

--- a/apps/blow-it/project.json
+++ b/apps/blow-it/project.json
@@ -10,7 +10,7 @@
       "defaultConfiguration": "production",
       "options": {
         "outputPath": "dist/apps/blow-it",
-        "base": ""
+        "base": "/monomoto"
       },
       "configurations": {
         "development": {
